--- a/tests/08_v2_env_context.yml
+++ b/tests/08_v2_env_context.yml
@@ -34,7 +34,7 @@ testcases:
     - name: Create variable set item secret one line
       script: "{{.cdsctl}} -f {{.cdsctl.config}} X project variableset item add {{.cds_project}} varset1 varSecret myLongSecret secret"
     - name: Create variable set item secret multiline line
-      script: "{{.cdsctl}} -f {{.cdsctl.config}} X project variableset item add {{.cds_project}} varset1 varSecret myMultilineSecret \"secretMultiline1 \n secretMultiline2\""  
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} X project variableset item add {{.cds_project}} varset1 myMultilineSecret \"secretMultiline1 \n secretMultiline2\" secret" 
 
     - type: v2_install_gpg_key
       cdsctl_command: "{{.cdsctl}} -f {{.cdsctl.config}}"
@@ -86,7 +86,7 @@ testcases:
                   id: stringVar
                 - run: "echo ${{ vars.varset1.varSecret }}" 
                   id: secretVar 
-                - run: echo "${{ toJSON(vars.varset1) }}" 
+                - run: "echo \"${{ vars.varset1.myMultilineSecret }}\""
                   id: varset1
                 - run: env
                   id: env  
@@ -129,6 +129,6 @@ testcases:
     - name: Check secretVar log content
       script: "cat {{.cds_workflow}}-1-1-overrideEnv-varset1 && cat {{.cds_workflow}}-1-1-overrideEnv-varset1 | grep \"secretMultiline2\""   
     - name: Check multiline secret
-      script: "cat {{.cds_workflow}}-1-1-overrideEnv-secretVar && cat {{.cds_workflow}}-1-1-overrideEnv-secretVar | grep \"myMultilineSecret: **********\""    
+      script: "cat {{.cds_workflow}}-1-1-overrideEnv-secretVar && cat {{.cds_workflow}}-1-1-overrideEnv-secretVar | grep \"**********\""    
     - name: Check git context    
       script: 'cat {{.cds_workflow}}-1-1-overrideEnv-env && cat {{.cds_workflow}}-1-1-overrideEnv-env | grep "\"ssh_private\": \"**********"'
