--- a/tests/08_v2_env_context.yml
+++ b/tests/08_v2_env_context.yml
@@ -131,4 +131,4 @@ testcases:
     - name: Check multiline secret
       script: "cat {{.cds_workflow}}-1-1-overrideEnv-varset1 && cat {{.cds_workflow}}-1-1-overrideEnv-varset1 | grep \"**********\""   
     - name: Check git context    
-      script: 'cat {{.cds_workflow}}-1-1-overrideEnv-env && cat {{.cds_workflow}}-1-1-overrideEnv-env | grep "\"ssh_private\": \"**********"'
+      script: 'cat {{.cds_workflow}}-1-1-overrideEnv-env && cat {{.cds_workflow}}-1-1-overrideEnv-env | grep "GIT_SSH_PRIVATE=**********"'
