feat: add run webview

--- a/contrib/vscode-cds/web/angular.json
+++ b/contrib/vscode-cds/web/angular.json
@@ -17,7 +17,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/web",
+            "baseHref": "/dist-web/",
+            "outputPath": "../dist-web",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
