--- a/contrib/vscode-cds/web/package.json
+++ b/contrib/vscode-cds/web/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --output-hashing=none",
+    "prod": "ng build --output-hashing=none --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
