fix: move webview

--- a/contrib/vscode-cds/webviews/workflow-preview/angular.json
+++ b/contrib/vscode-cds/webviews/workflow-preview/angular.json
@@ -18,7 +18,7 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "baseHref": "/dist-web/",
-            "outputPath": "../dist-web",
+            "outputPath": "../../dist-web/workflow-preview",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
