--- a/tests/08_v2_step_job_conditions.yml
+++ b/tests/08_v2_step_job_conditions.yml
@@ -114,33 +114,36 @@ testcases:
         - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
       retry: 20
       delay: 12
+      vars:
+        runIdentifier:
+          from: result.systemoutjson.systemoutjson0.id
 
-    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs get {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} 1 stepIgnoreError --format json
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs get {{.cds_project}} {{.runIdentifier}} stepIgnoreError --format json
       assertions:
         - result.code ShouldEqual 0
         - result.systemoutjson.job_id ShouldEqual "stepIgnoreError"
         - result.systemoutjson.status ShouldEqual "Success"
-    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs get {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} 1 wrongCondition --format json
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs get {{.cds_project}} {{.runIdentifier}} wrongCondition --format json
       assertions:
         - result.code ShouldEqual 0
         - result.systemoutjson.job_id ShouldEqual "wrongCondition"
         - result.systemoutjson.status ShouldEqual "Skipped"
-    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs get {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} 1 alwaysCondition --format json
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs get {{.cds_project}} {{.runIdentifier}} alwaysCondition --format json
       assertions:
         - result.code ShouldEqual 0
         - result.systemoutjson.job_id ShouldEqual "alwaysCondition"
         - result.systemoutjson.status ShouldEqual "Success"
-    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs get {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} 1 successCondition --format json
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs get {{.cds_project}} {{.runIdentifier}} successCondition --format json
       assertions:
         - result.code ShouldEqual 0
         - result.systemoutjson.job_id ShouldEqual "successCondition"
         - result.systemoutjson.status ShouldEqual "Success"
-    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs get {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} 1 failedJob --format json
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs get {{.cds_project}} {{.runIdentifier}} failedJob --format json
       assertions:
         - result.code ShouldEqual 0
         - result.systemoutjson.job_id ShouldEqual "failedJob"
         - result.systemoutjson.status ShouldEqual "Fail"
-    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs get {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} 1 conditionFailure --format json
+    - script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow jobs get {{.cds_project}} {{.runIdentifier}} conditionFailure --format json
       assertions:
         - result.code ShouldEqual 0
         - result.systemoutjson.job_id ShouldEqual "conditionFailure"
