--- a/tests/08_v2_workflow_generic_artifacts_with_artifactory.yml
+++ b/tests/08_v2_workflow_generic_artifacts_with_artifactory.yml
@@ -181,8 +181,9 @@ testcases:
     delay: 10
 
   - name: Check that the CDS workflow has at least one execution and is Success
-    script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow status {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} WorkflowA 1 --format json"
+    script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} WorkflowA --format json"
     assertions:
-    - result.systemoutjson.status ShouldEqual "Success"
-    retry: 100
-    delay: 10
+      - result.systemoutjson ShouldHaveLength 1
+      - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
+    retry: 10
+    delay: 12
