--- a/tests/08_v2_manualjob.yml
+++ b/tests/08_v2_manualjob.yml
@@ -94,9 +94,12 @@ testcases:
         - result.systemoutjson.systemoutjson0.status ShouldEqual "Success"
       retry: 10
       delay: 12
+      vars:
+        runIdentifier:
+          from: result.systemoutjson.systemoutjson0.id
 
     - name: Manual job
-      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow job run {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} 1 manual --data '{ \"approve\": true}'"
+      script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow job run {{.cds_project}} {{.runIdentifier}} manual --data '{ \"approve\": true}'"
 
     - name: Check that the CDS workflow is Success
       script: "{{.cdsctl}} -f {{.cdsctl.config}} experimental workflow history {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} --format json"
@@ -107,7 +110,7 @@ testcases:
       delay: 12
 
     - name: Download logs
-      script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow logs download {{.cds_project}} my_vcs_server {{.git.user}}/{{.git_repo}} {{.cds_workflow}} 1
+      script: {{.cdsctl}} -f {{.cdsctl.config}} experimental workflow logs download {{.cds_project}} {{.runIdentifier}}
 
     - name: Check log content
       script: "cat {{.cds_workflow}}-1-2-manual-step2 | grep \"World\""
