--- a/tests/lib/v2_create_project.yml
+++ b/tests/lib/v2_create_project.yml
@@ -92,6 +92,48 @@ steps:
 
   # Put the project ssh key as SSH Key on gitea
   - type: http
+    method: DELETE
+    url: "{{.input.git_host}}/api/v1/user/keys/{{.sshKeyName}}"
+    basic_auth_user: "{{.input.git_user}}"
+    basic_auth_password: "{{.input.git_password}}"
+    headers:
+      Content-Type: application/json
+    assertions:
+    - or:
+      - result.statuscode ShouldEqual 204
+      - result.statuscode ShouldEqual 404
+
+  # Drop existing ssh key for user
+  - type: http
+    method: GET
+    url: "{{.input.git_host}}/api/v1/user/keys"
+    headers:
+      Content-Type: application/json
+    basic_auth_user: "{{.input.git_user}}"
+    basic_auth_password: "{{.input.git_password}}"
+    assertions:
+    - result.statuscode ShouldEqual 200
+    vars:
+      keys:
+        from: result.bodyjson
+
+  - script: >
+      echo '{{.keys}}' | jq -c 'map(select(.title | contains("{{.sshKeyName}}")))'
+    vars:
+      keys_filtered:
+        from: result.systemout
+
+  - range: "{{.keys_filtered}}"
+    type: http
+    method: DELETE
+    url: "{{.input.git_host}}/api/v1/user/keys/{{.value.id}}"
+    basic_auth_user: "{{.input.git_user}}"
+    basic_auth_password: "{{.input.git_password}}"
+    assertions:
+    - result.statuscode ShouldEqual 204
+
+  # Add the project ssh key as SSH Key on gitea
+  - type: http
     method: POST
     url: "{{.input.git_host}}/api/v1/user/keys"
     basic_auth_user: "{{.input.git_user}}"
@@ -107,6 +149,5 @@ steps:
     assertions:
     - or:
       - result.statuscode ShouldEqual 201
-      - result.statuscode ShouldEqual 422
 
 output: {}
