test: integration test
Signed-off-by: Yvonnick Esnault <yvonnick.esnault@corp.ovh.com>

--- a/tests/lib/v2_add_git_repo.yml
+++ b/tests/lib/v2_add_git_repo.yml
@@ -70,7 +70,11 @@ steps:
             "secret": "{{.hookSecret}}",
             "content_type": "json",
             "url": "{{.input.cds_hook_url}}/v2/webhook/repository/gitea/my_vcs_server"
-        }
+        },
+        "events": [
+          "push",
+          "pull_request"
+        ]
       }
     vars:
       hookID:
