--- a/ui/package.json
+++ b/ui/package.json
@@ -88,7 +88,7 @@
     "spinkit": "2.0.1",
     "string-format-obj": "1.1.1",
     "ts-helpers": "1.1.2",
-    "tslib": "2.0.0",
+    "tslib": "2.3.0",
     "url": "0.11.0",
     "zone.js": "0.13.3",
     "zxcvbn": "4.4.2"
@@ -134,6 +134,7 @@
     "karma-jasmine-html-reporter": "1.5.0",
     "karma-junit-reporter": "1.2.0",
     "lint-staged": "12.0.2",
+    "ng-packagr": "^16.2.0",
     "style-loader": "3.3.3",
     "ts-node": "8.3.0",
     "typescript": "4.9.5",
