--- a/contrib/vscode-cds/tsconfig.json
+++ b/contrib/vscode-cds/tsconfig.json
@@ -8,8 +8,7 @@
 		],
 		"sourceMap": true,
 		"rootDir": "src",
-		"strict": false,   /* enable all strict type-checking options */
-		"allowSyntheticDefaultImports": true,
+		"strict": true,   /* enable all strict type-checking options */
 		/* Additional Checks */
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
