--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "module": "es2020",
     "outDir": "./dist/out-tsc",
-    "baseUrl": "./",
+    "baseUrl": "src",
     "paths": {
       "@cds/*": [
         ".src/app/*"
