--- a/contrib/vscode-cds/tsconfig.json
+++ b/contrib/vscode-cds/tsconfig.json
@@ -13,5 +13,6 @@
 		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
 		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	}
+	},
+	"exclude": ["webviews"]
 }
