--- a/contrib/vscode-cds/Makefile
+++ b/contrib/vscode-cds/Makefile
@@ -6,7 +6,9 @@ $(DIST):
 	mkdir -p $(DIST)
 
 build: $(DIST)
+	cd ../../ui && npm ci && ng build workflow-graph && cd dist/workflow-graph && npm pack
 	npm install --include=dev
+	cd webviews/workflow-preview && npm install && npm run build
 	npm run vsce package
 	mv vscode-cds-*.vsix $(DIST)
 
