--- a/contrib/vscode-cds/webviews/workflow-preview/package.json
+++ b/contrib/vscode-cds/webviews/workflow-preview/package.json
@@ -24,7 +24,7 @@
     "normalize.css": "^8.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "workflow-graph": "0.0.2",
+    "workflow-graph": "file:/../../../../ui/dist/workflow-graph/workflow-graph-0.0.1.tgz",
     "zone.js": "~0.13.3"
   },
   "devDependencies": {
