--- a/ui/libs/workflow-graph/package.json
+++ b/ui/libs/workflow-graph/package.json
@@ -4,9 +4,7 @@
   "peerDependencies": {
     "@angular/common": "16.2.12",
     "@angular/core": "16.2.12",
-    "ng-zorro-antd": "16.2.2"
-  },
-  "dependencies": {
+    "ng-zorro-antd": "16.2.2",
     "tslib": "2.3.0"
   },
   "sideEffects": false
