--- a/contrib/vscode-cds/Makefile
+++ b/contrib/vscode-cds/Makefile
@@ -6,9 +6,12 @@ $(DIST):
 	mkdir -p $(DIST)
 
 workflow-graph:
-	cd ../../ui && npm ci && ng build workflow-graph && cd dist/workflow-graph && npm pack
+	cd ../../ui && npm ci && ng build workflow-graph
 
-webviews: workflow-graph
+package-workflow-graph:
+    cd ../../ui/dist/workflow-graph && npm pack
+
+webviews: package-workflow-graph
 	cd webviews/workflow-preview && npm install && npm run build
 
 build: $(DIST) webviews
