--- a/contrib/vscode-cds/webviews/workflow-preview/.gitignore
+++ b/contrib/vscode-cds/webviews/workflow-preview/.gitignore
@@ -1,3 +1,5 @@
+# Because we are using a local package: workflow-graph, checksum change each time we build it
+package-lock.json
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
