feat(contrib): add workflow preview in vscode plugin (#6839)

--- a/contrib/vscode-cds/Makefile
+++ b/contrib/vscode-cds/Makefile
@@ -5,7 +5,16 @@ DIST := dist
 $(DIST):
 	mkdir -p $(DIST)
 
-build: $(DIST)
+workflow-graph:
+	cd ../../ui && npm ci && ng build workflow-graph
+
+package-workflow-graph: workflow-graph
+	cd ../../ui/dist/workflow-graph && npm pack
+
+webviews: package-workflow-graph
+	cd webviews/workflow-preview && npm install && npm run build
+
+build: $(DIST) webviews
 	npm install --include=dev
 	npm run vsce package
 	mv vscode-cds-*.vsix $(DIST)
