--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -7,6 +7,9 @@
     "paths": {
       "@cds/*": [
         ".src/app/*"
+      ],
+      "workflow-graph": [
+        "dist/workflow-graph"
       ]
     },
     "sourceMap": true,
