fix(contrib/helm-push): type docker and chart path default value
Signed-off-by: francois.samin <francois.samin@corp.ovh.com>

--- a/contrib/grpcplugins/action/helm-push/helm-push.yml
+++ b/contrib/grpcplugins/action/helm-push/helm-push.yml
@@ -5,7 +5,7 @@ description: |
   This push Helm chart on Chart Museum or Artifactory.
 inputs:
   chartFolder:
-    default: .chart/
+    default: ./chart
     type: string
     description: Relative path to chart folder to be published	
     required: true
