--- a/contrib/grpcplugins/action/artifactoryPromote/artifactoryPromote.yml
+++ b/contrib/grpcplugins/action/artifactoryPromote/artifactoryPromote.yml
@@ -1,4 +1,4 @@
-name: artifactory-promote
+name: artifactoryPromote
 type: action
 author: "François SAMIN <francois.samin@corp.ovh.com>"
 description: |
