refactor(contrib): rename artifactory-release and docker-push

--- a/contrib/grpcplugins/action/artifactoryRelease/Makefile
+++ b/contrib/grpcplugins/action/artifactoryRelease/Makefile
@@ -1,5 +1,5 @@
-PLUGIN_NAME		= docker-push
-TARGET_NAME		= docker-push
+PLUGIN_NAME		= artifactoryRelease
+TARGET_NAME		= artifactoryRelease
 
 ##### ^^^^^^ EDIT ABOVE ^^^^^^ #####
 
