fix: docker compose tests
Signed-off-by: francois.samin <francois.samin@corp.ovh.com>

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,5 +1,5 @@
 define MINIO_CONFIG
-export HOSTNAME=$$(hostname -I | cut -d' ' -f1)
+export HOSTNAME=$$(hostname)
 export AWS_DEFAULT_REGION=us-east-1
 export S3_BUCKET=cds-it
 export MINIO_ACCESS_KEY=AKIAIOSFODNN7EXAMPLE
